<resources>
    <string name="app_name">Punch Classifier</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Punch Videos</string>
    <string name="second_fragment_label">Punch List</string>
    <string name="next">Process</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="load_text">Record your punch video</string>
    <string name="duration">"Duration: %1$s ms"</string>
    <string name="quality">"Quality: %1$s "</string>
    <string name="content_description_media">"Initial position: stay in front of punching bag "</string>
    <string name="secondary_text">"1. Stay in front of punching bag. You should fit entirely in camera. "</string>
    <string name="supporting_text">2. Record your punches.</string>
    <string name="fab_record_video">Record Video</string>
    <string name="fab_open_video">Open video</string>
    <string name="punch_type">Punch type</string>
    <string name="punch_video_sample">Punch video sample</string>
    <string name="_0s">0s</string>
    <string name="video_uri">Video uri</string>
    <string name="cancel_work">Cancel</string>
    <string name="empty_punch_list">No punches in this video</string>
    <string name="processing_message">Video is processing, please wait</string>
    <string name="converting_notification_title">Coverting video</string>
    <string name="converting_notification_text">Converting video in progress</string>
</resources>